[260108] feat: 검색 구현, 강의 추가, 수정 구현

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -9,6 +9,11 @@ spring:
     hibernate:
       ddl-auto: validate
 
+  elasticsearch:
+    username: ${ELASTIC_USERNAME}
+    password: ${ELASTIC_PASSWORD}
+    uris: ${ELASTIC_URI}
+
   thymeleaf:
     cache: true
 
