프로필 조회 및 수정, 리뷰 작성 기능 완료

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,5 +18,5 @@ server:
 
 # 파일 업로드 경로
 file:
-  path-student: /studentImage
-  path-teacher: /teacherImage
+  path-student: ${user.home}/upload/studentImage/
+  path-teacher: ${user.home}/upload/teacherImage/
